# actual

./: Cargo.toml  LICENSE  LearningRust.ipynb  init_call_to.rs  readme.md  replacements.txt  structure.tldr
src/: acc_soft.rs  book.rs  dsa.rs  init_call_to.rs  lib.rs  main.rs  math.rs  menu.rs  rust_book.rs  test.rs  traits.rs  udemy.rs  ui.rs  utility.rs  utils.rs
src/acc_soft/: a_ident.rs  l_ident.rs  main.rs
src/database/: one.rs
src/dsa/: c_bubble_sort.rs
src/dsa/collections/: bubble_sort.rs  c_bubble_sort.rs  mod.rs
src/math/: add.rs  c_add.rs  c_ool_patterns.rs  tables.rs  test.tldr
src/math/aritimatic/: division.rs
src/math/indices/: mod.rs  nth_root.rs  power.rs
src/menu/: func_return.rs  screen.rs
src/test/: m.rs  vectors.rs
src/traits/: strings.rs  vectors.rs
src/ui/: tui.rs
src/utility/: call_to.rs  use.rs
src/utility/func/: ident.rs
src/utility/types/: errors.rs  func_arg.rs  func_ident.rs  func_return.rs  func_traits.rs  mod.rs
src/utils/: macros.rs  use.rs
src/utils/func/: ident.rs
src/utils/macros/: m_ident.rs
src/utils/types/: func_connect.rs  func_return.rs  mod.rs
tests/: math.rs
