[package]
name = "actual"
version = "0.0.1"
authors = ["scp-ss"]
edition = "2024"
keywords = ["learning", "dont-use"]
description = "This crate is for learning purposes only do NOT use"
readme = "readme.md"



[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
lazy_static = "1.5.0"
ratatui = "0.30.2"
num-traits = "0.2"
rug = "1.30.0"
bigdecimal = "0.4.10"
num-bigint = "0.5.1"
rand = '0.10.2'
